--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,16 @@
         <version>8.0.15</version>
         <scope>runtime</scope>
     </dependency>
+    <dependency>
+        <groupId>javax</groupId>
+        <artifactId>javaee-api</artifactId>
+        <version>8.0</version>
+    </dependency>
+    <dependency>
+        <groupId>javax</groupId>
+        <artifactId>javaee-api</artifactId>
+        <version>8.0</version>
+    </dependency>
 
 </dependencies>
 
